[tool.poetry]
name = "pykagapi"
version = "0.3.0"
description = "pykagapi - python wrapper for King Arthur's Gold-related APIs"
authors = ["moonburnt <moonburnt@disroot.org>"]
license = "LICENSE"
homepage = "https://github.com/moonburnt/pykagapi"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '(?:pykagapi|directory2)\/.*\.pyi?$'
